Add helper tag to join arbitrary lists into strings
Adds a yaml application tag '!join:' to support defining data as a list
while having the resulting contents automatically joined together with
the specified delimiter and passed as a string into the resulting object
returned by yaml for JJB to process.

This allows users to store long lists of data that is combined together
for use with Jenkins plugins that expect a delimited string of arguments
instead of needing each module in JJB to provide individual support.

Change-Id: I745181ade3926d5c29708963189ae499a0378ece

--- a/tests/parameters/fixtures/extended-choice-param003.yaml
+++ b/tests/parameters/fixtures/extended-choice-param003.yaml
@@ -11,3 +11,28 @@ parameters:
       description-property-file: /home/foo/bar.properties
       description-property-key: bar_desc
       value-description: bar1, bar2, bar3
+  - extended-choice:
+      name: OPTIONS_CHECKBOX
+      type: checkbox
+      value: !join:
+        - ','
+        -
+            - OptionA
+            - OptionB
+            - OptionC
+      visible-items: 2
+  - extended-choice:
+      name: MULTISELECTOPTIONS
+      description: "Available options"
+      property-key: key
+      quote-value: true
+      type: multi-select
+      value: !join:
+        - '|'
+        -
+            - foo
+            - bar
+            - select
+      visible-items: 2
+      multi-select-delimiter: '|'
+      default-value: foo
