--- a/setup.cfg
+++ b/setup.cfg
@@ -80,3 +80,4 @@ jenkins_jobs.modules =
     triggers=jenkins_jobs.modules.triggers:Triggers
     wrappers=jenkins_jobs.modules.wrappers:Wrappers
     zuul=jenkins_jobs.modules.zuul:Zuul
+    workflow-scm=jenkins_jobs.modules.scm:WorkflowSCM
