Add Pipeline job type and deprecate Workflow
Since introduction of the Jenkins Pipeline plugin
(https://wiki.jenkins-ci.org/display/JENKINS/Pipeline+Plugin), one can
configure a Pipeline job using a Groovy file lying with the source code
(see: https://jenkins.io/solutions/pipeline/).

We add support here for this kind of jobs, introducing a new component:
pipeline-scm. This component contains information about the repository to
clone and the name of the file where the job configuration can be found.

Since Workflow plugin is just an old name for the Pipeline plugin,
Workflow job type can be deprecated in favor of Pipeline job type to
avoid confusion and keep JJB in line with the terms used in Jenkins.

Change-Id: I098b9673c44b1281fa0954193d8fadf273685386
Story: 2000573
Task: 2974

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ jenkins_jobs.projects =
     matrix=jenkins_jobs.modules.project_matrix:Matrix
     maven=jenkins_jobs.modules.project_maven:Maven
     multijob=jenkins_jobs.modules.project_multijob:MultiJob
+    pipeline=jenkins_jobs.modules.project_pipeline:Pipeline
     workflow=jenkins_jobs.modules.project_workflow:Workflow
 jenkins_jobs.views =
     list=jenkins_jobs.modules.view_list:List
@@ -76,6 +77,7 @@ jenkins_jobs.modules =
     metadata=jenkins_jobs.modules.metadata:Metadata
     notifications=jenkins_jobs.modules.notifications:Notifications
     parameters=jenkins_jobs.modules.parameters:Parameters
+    pipeline-scm=jenkins_jobs.modules.scm:PipelineSCM
     properties=jenkins_jobs.modules.properties:Properties
     publishers=jenkins_jobs.modules.publishers:Publishers
     reporters=jenkins_jobs.modules.reporters:Reporters
