Update TestFairy plugin
- Update documentation
- Add valid options to max-duration, screenshot-interval, and
  video-quality
- Test max-duration, screenshot-interval, and video-quality options

Change-Id: If010e7bc79e269b766107a5b2e57b9916ca8637d
Signed-off-by: Kien Ha <kienha9922@gmail.com>

--- a/tests/publishers/fixtures/test-fairy-android002.yaml
+++ b/tests/publishers/fixtures/test-fairy-android002.yaml
@@ -6,6 +6,9 @@ publishers:
       keystorepath: /tmp/keystorefile
       notify-testers: false
       autoupdate: false
+      max-duration: 300m
+      screenshot-interval: 2
+      video-quality: low
       cpu: false
       memory: false
       logs: false
