Add unstable-if-warnings option for msbuild
- Update to use convert_mapping_to_xml
- Add plugin="msbuild" attribute
- Add full and minimal tests

Change-Id: I70c2b0e85a9c322582e3280c71d5ff55255e8a82
Signed-off-by: Kien Ha <kienha9922@gmail.com>

--- a/tests/builders/fixtures/msbuild-full.yaml
+++ b/tests/builders/fixtures/msbuild-full.yaml
@@ -5,3 +5,4 @@ builders:
       extra-parameters: "/maxcpucount:4"
       pass-build-variables: False
       continue-on-build-failure: True
+      unstable-if-warnings: True
