Wrapper pre-scm-buildstep: added support for failOnError parameter
- Added failOnError argument for pre-scm-buildstep
- Introduced buildsteps argument and moved list of build steps to match xml configuration of the preSCMbuildstep plugin.
- Updated existing test cases to match the new argument structure (
- Added test case for pre-scm-buildstep to verify creation of failOnError tag
- Added verification on version to maintain retro-compatibility

Change-Id: I25c19cd0552cf2de97b9c391492d95779c1360be
Story: 2000690

--- a/tests/yamlparser/fixtures/complete001.yaml
+++ b/tests/yamlparser/fixtures/complete001.yaml
@@ -11,18 +11,19 @@
     name: pre-scm-shell-ant
     wrappers:
       - pre-scm-buildstep:
-          - shell: |
-              #!/bin/bash
-              echo "Doing somethiung cool"
-          - shell: |
-              #!/bin/zsh
-              echo "Doing somethin cool with zsh"
-          - ant:
-              targets: "target1 target2"
-              ant-name: "Standard Ant"
-          - inject:
-               properties-file: example.prop
-               properties-content: EXAMPLE=foo-bar
+          buildsteps:
+            - shell: |
+                #!/bin/bash
+                echo "Doing somethiung cool"
+            - shell: |
+                #!/bin/zsh
+                echo "Doing somethin cool with zsh"
+            - ant:
+                targets: "target1 target2"
+                ant-name: "Standard Ant"
+            - inject:
+                properties-file: example.prop
+                properties-content: EXAMPLE=foo-bar
 
 - wrapper:
     name: copy-files
@@ -104,4 +105,3 @@
          #!/usr/bin/env python
          #
          print("Doing something cool with python")
-
