--- a/tests/publishers/fixtures/email-ext001.yaml
+++ b/tests/publishers/fixtures/email-ext001.yaml
@@ -6,6 +6,7 @@ publishers:
       subject: Subject for Build ${BUILD_NUMBER}
       body: The build has finished
       attach-build-log: false
+      compress-log: false
       attachments: "*/foo*.log"
       always: true
       unstable: true
