--- a/tests/publishers/fixtures/email-ext002.yaml
+++ b/tests/publishers/fixtures/email-ext002.yaml
@@ -4,5 +4,6 @@ publishers:
       subject: Subject for Build ${BUILD_NUMBER}
       body: The build has finished
       attach-build-log: false
+      compress-log: false
       attachments: "*/foo*.log"
       matrix-trigger: only-configurations
