adding extra properties to sonar publisher
allows you to explicitly set which maven to use for the sonar analysis
when having more than one sonar installation, you are required to select which one to use, there is no default fallback in the Jenkins plugin

Change-Id: I013ea80688efa17334448e6394d312ca6854cf07

--- a/tests/publishers/fixtures/sonar001.yaml
+++ b/tests/publishers/fixtures/sonar001.yaml
@@ -1,8 +1,10 @@
 publishers:
   - sonar:
+      installation-name: MySonar
       jdk: MyJdk
       branch: myBranch
       language: java
+      maven-installation-name: Maven3.3.3
       maven-opts: -DskipTests
       additional-properties: -DsonarHostURL=http://example.com/
       skip-global-triggers:
