add post-send script option
We need post-send script option to configure presendScript in the
generated configure xml.
When setting post-send as below:
   postsend-script: $DEFAULT_POSTSEND_SCRIPT
We could see below informaton in the generated configure xml.
<hudson.plugins.emailext.ExtendedEmailPublisher plugin="email-ext@2.42">
 <postsendScript>$DEFAULT_POSTSEND_SCRIPT</postsendScript>
</hudson.plugins.emailext.ExtendedEmailPublisher>

Change-Id: Ic215b2f3a9b5e7361a2cc1772226382da341ecd1
Signed-off-by: Liu Changcheng <changcheng.liu@intel.com>
Signed-off-by: Jerry Liu <primerlink@gmail.com>

--- a/tests/publishers/fixtures/email-ext001.yaml
+++ b/tests/publishers/fixtures/email-ext001.yaml
@@ -24,6 +24,7 @@ publishers:
       pre-build: true
       matrix-trigger: only-configurations
       presend-script: "cancel=true"
+      postsend-script: "cancel=true"
       save-output: true
       send-to:
         - developers
