update base_email_ext to adapt Email-ext plugin
The original function base_email_ext fix the setting
of some email cases e.g. failure fixed etc.
This patch could customize the email setting more
flexible and support the new options in email-ext plugin.

Change-Id: I49339bf83333ad2c29c23cc8bc5d5b3dfe2d67dd
Signed-off-by: Liu Changcheng <changcheng.liu@intel.com>
Signed-off-by: Jerry Liu <primerlink@gmail.com>

--- a/tests/publishers/fixtures/email-ext001.yaml
+++ b/tests/publishers/fixtures/email-ext001.yaml
@@ -8,26 +8,21 @@ publishers:
       attach-build-log: false
       compress-log: false
       attachments: "*/foo*.log"
-      always: true
-      unstable: true
-      first-failure: true
-      not-built: true
-      aborted: true
-      regression: true
-      failure: true
-      second-failure: true
-      improvement: true
-      still-failing: true
-      success: true
-      fixed: true
-      still-unstable: true
-      pre-build: true
+      always:
+      unstable:
+      first-failure:
+      not-built:
+      aborted:
+      regression:
+      failure:
+      second-failure:
+      improvement:
+      still-failing:
+      success:
+      fixed:
+      still-unstable:
+      pre-build:
       matrix-trigger: only-configurations
       presend-script: "cancel=true"
       postsend-script: "cancel=true"
       save-output: true
-      send-to:
-        - developers
-        - requester
-        - culprits
-        - recipients
