update base_email_ext to adapt Email-ext plugin
The original function base_email_ext keeps the setting
of some email cases e.g. failure/regression etc.
This patch could customize the email setting more
flexible and support the new options in email-ext plugin.

Change-Id: I49339bf83333ad2c29c23cc8bc5d5b3dfe2d67dd
Signed-off-by: Liu Changcheng <changcheng.liu@intel.com>
Signed-off-by: Jerry Liu <primerlink@gmail.com>

--- a/tests/publishers/fixtures/email-ext002.yaml
+++ b/tests/publishers/fixtures/email-ext002.yaml
@@ -6,4 +6,19 @@ publishers:
       attach-build-log: true
       compress-log: true
       attachments: "*/foo*.log"
+      failure:
+        - recipients: $BUILD_USER_EMAIL, cc:$DEFAULT_RECIPIENTS
+        - reply-to: $DEFAULT_REPLYTO
+        - subject: $DEFAULT_SUBJECT
+        - body: Hi, pls check log
+        - attach-build-log: True
+        - compress-log: True
+        - send-to:
+           - culprits
+           - developers
+           - recipientlist
+           - requestor
+           - testfail
+           - buildfail
+           - committers
       matrix-trigger: only-configurations
