Add view management functionality
- Adds the ability for JJB to work with views
- Views can be created, updated, and deleted.
- New modules for List view and Build Pipeline view are added
- New tests for testing the deletion of views

Example View configuration:

    - view:
        name: MyView
        view-type: list

Change-Id: Idb29a4407bcc14593e10a4d951036cb04e8e6c27
Co-Authored-By: Brandon Leonard <brandon.leonard@rackspace.com>
Co-Authored-By: Joao Vale <jpvale@gmail.com>
Co-Authored-By: Lucas Dutra Nunes <ldnunes@ossystems.com.br>
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,9 @@ jenkins_jobs.projects =
     maven=jenkins_jobs.modules.project_maven:Maven
     multijob=jenkins_jobs.modules.project_multijob:MultiJob
     workflow=jenkins_jobs.modules.project_workflow:Workflow
+jenkins_jobs.views =
+    list=jenkins_jobs.modules.view_list:List
+    pipeline=jenkins_jobs.modules.view_pipeline:Pipeline
 jenkins_jobs.builders =
     raw=jenkins_jobs.modules.general:raw
 jenkins_jobs.reporters =
