Add support for groovy scripts in EnvInject plugin builder
The EnvInject plugin also supports evaluating a Groovy Script.
This is available as the "groovyScriptContent" parameter and this
commit adds support for it.

Change-Id: I1908023c6752b14511f17b492bbf95d689bc0518

--- a/tests/builders/fixtures/inject.yaml
+++ b/tests/builders/fixtures/inject.yaml
@@ -4,3 +4,4 @@ builders:
       properties-content: EXAMPLE=foo-bar
       script-file: script.sh
       script-content: script content
+      groovy-script-content: groovy script content
