Removed some deprecation warnings and enabled py35 on tox.
Change-Id: Icc5b28c4636b542a10502b7b1d2d2dc2028cc166
Signed-off-by: Sorin Sbarnea <ssbarnea@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 minversion = 1.6
-envlist = pep8, py34, py27
+envlist = pep8, py34, py35, py27
+skip_missing_interpreters = true
 
 [testenv]
 # Note(Vek): JJB is not compatible with a non-zero PYTHONHASHSEED
