--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ jenkins_jobs.projects =
     maven=jenkins_jobs.modules.project_maven:Maven
     multijob=jenkins_jobs.modules.project_multijob:MultiJob
     workflow=jenkins_jobs.modules.project_workflow:Workflow
+    workflow-multibranch=jenkins_jobs.modules.project_workflow_multibranch:WorkflowMultiBranch
 jenkins_jobs.views =
     list=jenkins_jobs.modules.view_list:List
     pipeline=jenkins_jobs.modules.view_pipeline:Pipeline
