Update rich-text-publisher plugin
- update rich-text-publisher plugin to convert xml
- add plugin='rich-text-publisher-plugin'
- update docstring
- update test cases

Change-Id: I771b4dcc09b598c193416ce3f3ba48597dc5efad

--- a/tests/publishers/fixtures/richtext-complete.yaml
+++ b/tests/publishers/fixtures/richtext-complete.yaml
@@ -2,4 +2,7 @@ publishers:
     - rich-text-publisher:
         stable-text: the stable text
         unstable-text: the unstable text
+        failed-text: the failed text
+        unstable-as-stable: false
+        failed-as-stable: false
         parser-name: HTML
