--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-six>=1.5.2
-PyYAML
+# The order of packages is significant, because pip processes them in the order
+# of appearance. Changing the order has an impact on the overall integration
+# process, which may cause wedges in the gate later.
+six>=1.9.0 # MIT
+PyYAML>=3.10.0 # MIT
+pbr>=1.8 # Apache-2.0
+stevedore>=1.17.1 # Apache-2.0
 python-jenkins>=0.4.8
-pbr>=1.0.0,<2.0
-stevedore>=1.8.0
