Preserve trailing newlines in Jinja2 templates
Change-Id: Ic726e7f18604006c0c9f8cd251f256f844110c31

--- a/tests/yamlparser/job_fixtures/default_param_jinja2_template_direct.yaml
+++ b/tests/yamlparser/job_fixtures/default_param_jinja2_template_direct.yaml
@@ -6,5 +6,5 @@
 - job-template:
     name: sample-job
     builders:
-      - shell: !j2: |
+      - shell: !j2: |-
           echo {{ missing_param | default('default_value') }}
