--- a/tests/yamlparser/job_fixtures/default_param_jinja2_template_indirect.yaml
+++ b/tests/yamlparser/job_fixtures/default_param_jinja2_template_indirect.yaml
@@ -9,5 +9,5 @@
     name: sample-job
     param_3: '{param_2}-plus'
     builders:
-      - shell: !j2: |
+      - shell: !j2: |-
           echo {{ param_3 }}
