--- a/tests/yamlparser/job_fixtures/jinja-yaml-macro-body.yaml
+++ b/tests/yamlparser/job_fixtures/jinja-yaml-macro-body.yaml
@@ -3,7 +3,7 @@
     builders:
       !j2-yaml: |
         # Check that inner elements are expanded, but only once.
-        - shell: !j2: |
+        - shell: !j2: |-
             echo ${var}
 
 - job-template:
