--- a/tests/yamlparser/job_fixtures/default_param_jinja2_macro_direct.yaml
+++ b/tests/yamlparser/job_fixtures/default_param_jinja2_macro_direct.yaml
@@ -6,7 +6,7 @@
 - builder:
     name: sample-builder
     builders:
-      - shell: !j2: |
+      - shell: !j2: |-
           echo {{ missing_param | default('default_value') }} {{ other_param }}
 
 - job-template:
