--- a/tests/yamlparser/job_fixtures/default_param_jinja2_macro_indirect.yaml
+++ b/tests/yamlparser/job_fixtures/default_param_jinja2_macro_indirect.yaml
@@ -8,7 +8,7 @@
 - builder:
     name: sample-builder
     builders:
-      - shell: !j2: |
+      - shell: !j2: |-
           echo {{ param_3 }} {{ other_param }}
 
 - job-template:
