Add support for Python 3.11 and 3.12
Change-Id: I4db0a458e054becc924726f25fff2cf0a80f3cc9

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -33,6 +33,8 @@
         - tox-py39:
             nodeset: ubuntu-focal
         - tox-py310
+        - tox-py311
+        - tox-py312
         - jjb-tox-linters
         - jjb-tox-cross-python-jenkins
         - jjb-tox-docs-linkcheck
@@ -44,3 +46,5 @@
         - tox-py39:
             nodeset: ubuntu-focal
         - tox-py310
+        - tox-py311
+        - tox-py312
